# mia

./: .gitignore  Makefile.in  README  configure  configure.ac
man/: Makefile.in
matrices/: Makefile.in
scripts/: iterate_whmia_D.pl  iterate_whmia_list_D.pl  iterate_whmia_list_phred64_D.pl  iterate_whmia_list_phred64_adapterTrim_D.pl  iterate_whmia_phred64_D.pl
src/: Makefile.am  Makefile.in  ccheck.cc  config.h  config.h.in  fsdb.c  io.c  io.h  map_align.c  map_alignment.c  mia.c  mia.h  mia_main.c  myers_align.c  myers_align.h  params.h
